# script_factory

./: README.md  blog  debian.package.list  develop.list  necessary.list  optional.list  phone.list  rrc
bash/: extend-monitor  extend-monitor.service  synconfig.sh
c/: dir.c  random.c
gtk_factory/: cluter.js  cluter.js~  file_monitor  file_monitor.c  file_monitor.c~  file_monitor.gjs~  file_monitor.js  file_monitor.js~  gjs_gtk.js  gstream_t.c  suffix.c
gtk_factory/helloworld/: .helloworld.js.swp  .helloworld.py.swp  helloworld  helloworld.c
homerc/: Xmodmap  alias  bash_aliases  devscripts  gitconfig  inputrc  msmtprc  offlineimaprc  screenrc  tmux.conf
homerc/mutt/: account.bili  account.bin.li  account.libin  gpg.rc  muttrc  signature.bili  signature.bin.li  signature.libin
homerc/weechat/: alias.conf
kernel/: Makefile  README.md  hello.c
patches/: audio_policy.patch  scandir.patch
python/: debian.list  helloworld.py  is_not.py
qt_factory/: hw.qml
scopes/dianping/DianPing/: CMakeLists.txt  manifest.json  readme.md
scopes/dianping/DianPing/data/: CMakeLists.txt  DianPing-scope.ini.in
scopes/dianping/DianPing/src/: CMakeLists.txt  DianPing-preview.cpp  DianPing-preview.h  DianPing-query.cpp  DianPing-query.h  DianPing-scope.cpp  DianPing-scope.h
